logs/uso_de_ia/S03/3.1.1/prompt.md
Realizar analisis para validar los supuestos que he definido en la sección 3.1.1 de sections/S03-Reto_de_Negocio/3_1_Pregunta de negocio/results/pregunta.md, guardar script en sections/S03-Reto_de_Negocio/3_1_Pregunta de negocio/code/01-supuestos. 

Transversal: 
1. Guardar datasets de staging en data/staging/S03/ para que estos sean reutilizados por futuros procesos que los requieran. Guarda la descripción detallada de cada dataset en docs/staging_data.md
2.Los plots deben incluirse en su respectviva carpeta de results, para este proceso correspondiente es 'sections/S03-Reto_de_Negocio/3_1_Pregunta de negocio/results/imgs'
3. Al finalizar incluye los hallazgos preliminares de este proceso en 'sections/S03-Reto_de_Negocio/3_1_Pregunta de negocio/results/pregunta.md' para  mi revisión.
4. Diligencia logs/uso_de_ia/S03/3.1.1/output.md como logs del proceso que realizaste.
5. Usa el paquete sura_brand para los gráficos.
