logs/uso_de_ia/S03/3.2.1/prompt.md
Realizar un modelo que estime la frecuencia y la severidad de los siniestros para estimar el costo esperado de siniestralidad por empresa y por clase de riesgo, basado en lo revisado en la sección 3.1.1 de sections/S03-Reto_de_Negocio/3_1_Pregunta de negocio/results/pregunta.md, guardar código en en sections/S03-Reto_de_Negocio/3_2_Modelado frecuencia_severidad/code/01-modelo. 

Transversal: 
1. Guardar datasets de staging en data/staging/S03/ para que estos sean reutilizados por futuros procesos que los requieran. Guarda la descripción detallada de cada dataset en docs/staging_data.md
2.Los plots deben incluirse en su respectviva carpeta de results, para este proceso correspondiente es 'sections/S03-Reto_de_Negocio/3_2_Modelado frecuencia_severidad/results/imgs'
3. Al finalizar incluye los hallazgos preliminares de este proceso en 'sections/S03-Reto_de_Negocio/3_2_Modelado frecuencia_severidad/results/model_frecuencia_serveridad.md' para  mi revisión.
4. Diligencia logs/uso_de_ia/S03/3.2.1/output.md como logs del proceso que realizaste.
5. Usa el paquete sura_brand para los gráficos.